--- a/style.css
+++ b/style.css
@@ -68,35 +68,38 @@ body {
   }
 }
 
-@media screen and (min-width: 1000px) {
+@media screen and (min-width: 1100px) {
   body {
-    width: 100vw;
-    height: 100vh;
+    width: auto;
+    height: auto;
     background: url("images/bg-desktop.svg"), hsl(257, 40%, 49%);
     background-size: cover;
-    background-repeat: no-repeat;
-    display: grid;
-    place-items: center;
+    /* background-repeat: no-repeat; */
+    /* display: grid;
+    place-items: center; */
   }
   .container {
-    width: 1020px;
-    /* height: 700px; */
+    width: auto;
+
     display: flex;
   }
   .logo {
-    width: 1020px;
+    /* width: 1020px; */
   }
   .logo img {
-    width: 150px;
-
+    width: 200px;
+    position: relative;
+    left: 0%;
     margin-top: 40px;
   }
   .illustration img {
-    width: 500px;
+    width: 100%;
     margin-top: 65px;
   }
   .bottom-text {
     text-align: left;
+    /* min-width: 20%; */
+    max-width: 500px;
     margin-left: 50px;
     margin-top: 65px;
     color: #ffffff;
